<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/homeFragment"
          android:title="@string/home"
          android:icon="@drawable/home_menu"
    />


    <item android:id="@+id/attendanceFragment"
          android:title="@string/attendance"
          android:icon="@drawable/attendance_menu"
    />

    <item android:id="@+id/leaveFragment"
          android:title="@string/leave"
          android:icon="@drawable/ic_apply_leaves"
    />


    <item android:id="@+id/requestsFragment"
        android:title="@string/requests"
        android:icon="@drawable/leave_menu"
        />


    <item android:id="@+id/profileFragment"
          android:title="@string/profile"
          android:icon="@drawable/profile_menu"
    />
</menu>