<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dp_16"
    app:cardCornerRadius="@dimen/dp_16"
    app:cardElevation="@dimen/dp_8"
    xmlns:android="http://schemas.android.com/apk/res/android">




    <LinearLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:gravity="center"
        android:orientation="vertical">



            <TextView
                style="@style/GreyedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/str_date"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/medium_txt_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart" />




<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            style="@style/GreyedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/no_of_hrs"
            android:textAlignment="textStart" />
        <TextView
            android:id="@+id/tvNoOfHrs"
            style="@style/large_txt_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_4"
            android:textSize="@dimen/dp_20"
            android:textAlignment="textStart" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <TextView
            style="@style/GreyedText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_4"
            android:text="@string/str_remarks"
            android:textAlignment="textEnd"
            />
        <TextView
            android:id="@+id/tvRemarks"
            style="@style/large_txt_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="marquee"
            android:layout_marginStart="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_4"
            android:textAlignment="textEnd" />

    </LinearLayout>

</LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/GreyedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginEnd="@dimen/dp_4"
                    android:text="@string/str_applied_on"
                    android:textAlignment="textStart" />
                <TextView
                    android:id="@+id/tvAppliedOn"
                    style="@style/large_txt_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:layout_marginEnd="@dimen/dp_4"
                    android:textAlignment="textStart" />

            </LinearLayout>


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/GreyedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_4"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginEnd="@dimen/dp_4"
                    android:text="@string/status"
                    android:textAlignment="textEnd" />
                <TextView
                    android:id="@+id/tvStatus"
                    style="@style/large_txt_dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:ellipsize="marquee"
                    android:layout_marginStart="@dimen/dp_4"
                    android:layout_marginEnd="@dimen/dp_4"
                    android:textAlignment="textEnd" />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</com.google.android.material.card.MaterialCardView>