<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_16"
    tools:context=".ui.dashboard.leave.ApplyShortLeaveActivity">



    <RelativeLayout
        android:id="@+id/rlSelectDate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/edit_text_round_gray_background"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/large_txt_bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tvSelectStartDate"
            style="@style/large_txt_dark"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/dp_8"
            android:drawableEnd="@drawable/right_arrow"
            android:gravity="center"
            android:text="@string/str_select" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlNoOfHrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@drawable/edit_text_round_gray_background"
        app:layout_constraintTop_toBottomOf="@+id/rlSelectDate">

        <TextView
            style="@style/large_txt_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_8"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/no_of_hrs" />


        <org.angmarch.views.NiceSpinner
            android:id="@+id/nice_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="end"
            android:layout_margin="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:gravity="center" />

        <!--        <TextView-->
        <!--            android:id="@+id/tvSelectStartDate"-->
        <!--            style="@style/large_txt_dark"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="25dp"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_centerInParent="true"-->
        <!--            android:layout_margin="@dimen/dp_8"-->
        <!--            android:drawableEnd="@drawable/right_arrow"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/str_select" />-->

    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldRemarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/rlNoOfHrs"
        app:shapeAppearance="@style/TextFieldShapeAppearance.SmallComponent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextRemarks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="Enter Remarks..."
            android:inputType="textMultiLine"
            android:minLines="4" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonApply"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/default_btn_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/color_checkin"
        android:text="@string/str_apply"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFieldRemarks" />


    <com.goldmedal.hrapp.common.RotateLoading
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:loading_color="@color/darkBackground"
        app:loading_width="@dimen/dp_2" />


</androidx.constraintlayout.widget.ConstraintLayout>